fix: increase gap in content layout for improved spacing

--- a/html-css/Alura/Repositorio/style.css
+++ b/html-css/Alura/Repositorio/style.css
@@ -22,7 +22,7 @@ body{
     width: 615px;
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 40px;
 }
 .apresentacao__conteudo__titulo{
     font-size: 32px;
